<resources>
    <string name="app_name">Task</string>
    <string name="new_back">取消</string>
    <string name="new_title">添加任务-周一</string>
    <string name="new_add">确定</string>
    <string name="new_edit_text">请输入任务内容</string>
    <string name="new_start">开始时间</string>
    <string name="new_end">结束时间</string>
    <string name="new_remind">是否提醒</string>
    <string name="view_edit">编辑</string>
    <string name="view_back">查看任务</string>
    <string name="week_current">今</string>
    <string name="new_start_time">07:00</string>
    <string name="new_end_time">07:30</string>
    <string name="view_delete">删除</string>

</resources>
