<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 顶部栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/new_title_layout"
        android:background="@drawable/background1"
        android:paddingTop="16dp">

        <!-- 取消按钮 -->
        <TextView
            android:layout_width="42dp"
            android:layout_height="23dp"
            android:id="@+id/new_back"
            android:text="@string/new_back"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="@drawable/activity_new_back"
            android:layout_marginTop="13dp"
            android:layout_marginStart="15dp"/>

        <!-- 标题 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/new_title"
            android:text="@string/new_title"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            tools:ignore="RelativeOverlap" />

        <!-- 确定按钮 -->
        <TextView
            android:layout_width="42dp"
            android:layout_height="23dp"
            android:id="@+id/new_add"
            android:text="@string/new_add"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="@drawable/activity_new_add"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <!-- 输入任务内容 -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/new_task"
        android:textSize="16sp"
        android:textColor="@color/colorText_4"
        android:hint="@string/new_edit_text"
        android:background="@null"
        android:singleLine="true"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/new_title_layout"/>

    <!-- 分割线1 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:id="@+id/line_1"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/new_task"/>

    <!-- 开始时间 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/new_start"
        android:textSize="15sp"
        android:textColor="@color/colorText_4"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/line_1"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:id="@+id/new_start_time"
        android:text="@string/new_start_time"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1"/>

    <!-- 分割线2 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/line_2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorText_2"
        app:layout_constraintTop_toBottomOf="@id/new_start_time"/>

    <!-- 结束时间 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/new_end"
        android:textSize="15sp"
        android:textColor="@color/colorText_4"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/line_2"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:id="@+id/new_end_time"
        android:text="@string/new_end_time"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_2"/>

    <!-- 分割线3 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:id="@+id/line_3"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/new_end_time"/>

    <!-- 提醒 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/new_remind"
        android:textSize="15sp"
        android:textColor="@color/colorText_4"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/line_3"/>

    <com.suke.widget.SwitchButton
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:id="@+id/new_remind"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="13dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_3"/>

    <!-- 分割线4 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/line_4"
        android:layout_marginTop="13dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/new_remind"/>

</android.support.constraint.ConstraintLayout>
