<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 背景图片 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/view_background"
        android:background="@drawable/background2"
        app:layout_constraintDimensionRatio="19:12"
        tools:ignore="ContentDescription" />

    <!-- 返回图片 -->
    <ImageView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/view_back_img"
        android:src="@drawable/back"
        tools:ignore="ContentDescription"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 返回按钮 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/view_back"
        android:text="@string/view_back"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 任务内容 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/view_task"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/view_time"/>

    <!-- 任务时间 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/view_time"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/view_background"/>

    <!-- 底部栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:id="@+id/view"
            android:layout_centerHorizontal="true"/>

        <!-- 编辑任务 -->
        <ImageView
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:id="@+id/view_edit"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/view"
            android:background="@drawable/activity_view_edit"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="31dp"
            android:layout_height="22dp"
            android:id="@+id/view_edit_text"
            android:text="@string/view_edit"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="#888888"
            android:layout_toStartOf="@id/view"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="10dp"/>

        <!-- 删除任务 -->
        <ImageView
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:id="@+id/view_delete"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/view"
            android:background="@drawable/activity_view_delete"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="31dp"
            android:layout_height="22dp"
            android:id="@+id/view_delete_text"
            android:text="@string/view_delete"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="#888888"
            android:layout_toEndOf="@id/view"
            android:layout_marginTop="39dp"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
